src/objects/Band__c.object
<CustomObject>
    <description>Bands playing at festival.</description>
    <fields>
        <fullName>Genre__c</fullName>
        <description>Musical genre</description>
        <label>Genre</label>
        <picklist>
            <picklistValues>
                <fullName>Rock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hip-Hop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R &amp; B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Soul</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reggae</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Folk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Country</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Experimental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classical</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Headliner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the band is the headliner.</description>
        <label>Headliner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manager_Phone_Number__c</fullName>
        <description>Phone number of band manager.</description>
        <label>Manager Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Needs_Piano__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if band needs piano.</description>
        <label>Needs Piano</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Set_Time__c</fullName>
        <description>Time when set starts.</description>
        <label>Set Time</label>
        <picklist>
            <picklistValues>
                <fullName>10 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The stage where the band is playing.</description>
        <label>Stage</label>
        <referenceTo>Stage__c</referenceTo>
        <relationshipLabel>Bands</relationshipLabel>
        <relationshipName>Bands</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Twitter_Handle__c</fullName>
        <description>Twitter handle.</description>
        <label>Twitter Handle</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Band</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Band Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bands</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>